fixed the overflow

--- a/src/pages/homepage/homepage.css
+++ b/src/pages/homepage/homepage.css
@@ -3,6 +3,7 @@
 .homepage-main {
   width: 75%;
   margin: auto;
+  overflow-x: hidden;
 }
 
 .homepage-firstsection {
